# rag_practice

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
infofla_rag/: .dockerignore  .gitignore  Dockerfile  README.md  check_qdrant.py  docker-compose.yaml  main.py  pyproject.toml
infofla_rag/app/: api.py  gradio_ui.py
infofla_rag/app/templates/: index.html
infofla_rag/data/: data_crawling.py  preprocessing.py
infofla_rag/src/: chunking.py  config.py  llm.py  logging_config.py  pipeline.py  prompt.py  qdrant.py  schemas.py  settings.py  text_utils.py  vLLM.py
infofla_rag/tests/: test_api_rag.py
law_rag/: pyproject.toml
law_rag/src/: embedding_pipeline.py  eval_retrieval_hybrid.py  retrieval.py
