[project]
name = "ict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.2",
    "bitsandbytes>=0.48.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "geckodriver-autoinstaller>=0.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=1.0.0",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "ruff>=0.14.8",
    "selenium>=4.38.0",
    "selenium-driverless>=1.9.4",
    "sentence-transformers>=5.1.2",
    "webdriver-manager>=4.0.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gradio>=6.0.2",
]
